--- a/index.html
+++ b/index.html
@@ -65,28 +65,28 @@
 									<li>
 										<span class="image"><img src="images/Judi.jpg" width="300" height=auto alt="" /></span>
 										<h3>Dr. Judi Provencal</h3>
-										<p>Associate Professor, Director of Delaware Asteroseismic Center, Resident
+										<p>Associate Professor, Director of Delaware Asteroseismic Research Center, Resident
 										Astronomer at MCAO. </p>
 									</li>
 									<li>
 										<span class="image"><img src="images/Millie.jpg" width="300" height=auto alt="" /></span>
 										<h3>Millie Dill</h3>
-										<p>Fourth-year undergraduate student, working with Dr. Provencal since Spring 2019. Graduation expected Spring 2025. </p>
+										<p>Fourth-year undergraduate student, working with Dr. Provencal since Spring 2019. Graduating Spring 2025. </p>
 									</li>
 									<li>
 										<span class="image"><img src="images/Henry.jpg" width="300" height=auto alt="" /></span>
 										<h3>Henry Sanford-Crane</h3>
-										<p>Ph.D. student, working with Dr. Provencal since Spring 2022. Graduation expected Spring 2027. </p>
+										<p>Ph.D. student, working with Dr. Provencal since Spring 2022. Graduation expected Spring 2028. </p>
 									</li>
 									<li>
 										<span class="image"><img src="images/Kaylee.jpg" width="300" height=auto alt="" /></span>
 										<h3>Kaylee Grace</h3>
-										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2027. </p>
+										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2028. </p>
 									</li>
 									<li>
 										<span class="image"><img src="images/Zach.jpg" width="300" height=auto alt="" /></span>
 										<h3>Zach Savery</h3>
-										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2027. </p>
+										<p>Ph.D. student, working with Dr. Provencal since Fall 2022. Graduation expected Spring 2028. </p>
 									</li>
 								</ul>
 								<footer class="major">
@@ -125,7 +125,7 @@
 								</ul>
 								<p>Dr. Provencal's group has several ongoing research projects which you can learn more about below. The group members are also educational associates at 
 								MCAO where they host Public, Family, and Children's Programs. They also use the 24" telescope in their research, as well as the 1.3-m telescope which should 
-								begin science operations in Summer 2024. Group members are also teaching assistants at the University of Delaware, where they have taught a variety of labs and 
+								begin science operations in Spring 2025. Group members are also teaching assistants at the University of Delaware, where they have taught a variety of labs and 
 								discussion sections.</p>
 								<footer class="major">
 									<ul class="actions special">
