--- a/wet.html
+++ b/wet.html
@@ -56,9 +56,12 @@
 									<tr><td>Teide 1-meter, LCO</td><td>Optical</td><td>Tenerife, Spain</td></tr>
 									<tr><td>McDonald 1-meter, LCO</td><td>Optical</td><td>Fort Davis, Texas</td></tr>
 									<tr><td>CTIO 1-meter, LCO</td><td>Optical</td><td>CTIO, Chile</td></tr>
-									<tr><td>Kitt Peak 0.9-meter, Southeastern Association for Research in Astronomy (SARA)</td><td>Optical</td>Tuscon, Arizona<td></td></tr>
+									<tr><td>Kitt Peak 0.9-meter, Southeastern Association for Research in Astronomy (SARA)</td><td>Optical</td><td>Tuscon, Arizona</td></tr>
 									<tr><td>CTIO 0.6-meter, SARA</td><td>Optical</td><td>CTIO, Chile</td></tr>
 									<tr><td>Roque de los Muchachos 1-meter, SARA</td><td>Optical</td><td>La Palma, Spain</td></tr>
+									<tr><td>2.1-meter, McDonald Observatory</td><td>Optical</td><td>Fort Davis, Texas</td></tr>
+									<tr><td>Paul and Jane Meyer Observatory</td><td>Optical</td><td>Valley Mills, Texas</td></tr>
+									<tr><td>Steward Observatory</td><td>Optical</td><td>Tucson, Arizona</td></tr>
 								</table></p>
 							</section>
 
