--- a/wet.html
+++ b/wet.html
@@ -29,7 +29,9 @@
 							<section id="content" class="main">
 								<!--span class="image main"><img src="images/pic04.jpg" alt="" /></span-->
 								<h2>General Run Information</h2>
-								<p>This Whole Earth Telescope (WET) observation campaign is focused on studying the morphology of the debris disk around the pulsating hydrogen atmosphere (DAV) white dwarf G29-38.</p>
+								<p>This Whole Earth Telescope (WET) observation campaign is focused on studying the morphology of the debris disk around the pulsating hydrogen atmosphere (DAV) white dwarf G29-38.
+								This project requires concurrent observations at both optical and infrared wavelengths to study G29-38's debris disk. The project’s goal is to investigate the disk’s response to G29-38’s
+								photospheric pulsations and use that information to probe the disk’s morphology.</p>
 							</section>
 
               <section id="content" class="main">
