--- a/wet.html
+++ b/wet.html
@@ -33,7 +33,12 @@
 								This project requires concurrent observations at both optical and infrared wavelengths to study G29-38's debris disk. The project’s goal is to investigate the disk’s response to G29-38’s
 								photospheric pulsations and use that information to probe the disk’s morphology. These debris disks are important to our understanding of exoplanet composition and planetary system evolution.
 								Understanding the nature of the dust in the debris disk and the geometry of its distribution is vital to calculate debris masses and lifetimes, and to constrain the mechanisms that resulted in
-								the formation of the disk in the first place. G29-38 provides the perfect target to validate a new methodology to probe the morphology of WD debris disks.</p>
+								the formation of the disk in the first place. G29-38 provides the perfect target to validate a new methodology to probe the morphology of WD debris disks. WET is a network of telescopes spread
+								across the Earth in longitude that are operated as a single instrument to obtain nearly continuous photometric observations of each target. Twenty to twenty-five telescopes typically participate
+								in a single WET run. An interactive headquarters will communicate with observers nightly to ensure coverage of the primary target (G29-38). This coverage is crucial to accurately identify pulsations
+								and multiplets seen in multiperiodic pulsators, as it prevents confusing window aliases in the Fourier analysis of the light curves. By merging data from individual sites into a single light curve, we
+								acquire a nearly continuous time-series record of a star’s brightness variations. When the run is complete, and the individual light curves merged, our data set with an expected time base of 14 days
+								(1,200,000 seconds) will be able to identify frequency separations greater than 0.8 μHz.</p>
 							</section>
 
               <section id="content" class="main">
