--- a/wet.html
+++ b/wet.html
@@ -61,18 +61,19 @@
 									<tr><td>Gemini South</td><td>Infrared</td><td>Cerro Tololo Inter-American Observatory (CTIO), Chile</td></tr>
 									<tr><td>National Astronomical Observatory San Pedro Martir (OAN-SPM)</td><td>Infrared</td><td>Baja California, Mexico</td></tr>
 									<tr><td>Calar Alto Observatory (CAHA)</td><td>Infrared</td><td>Andalucia, Spain</td></tr>
-									<tr><td>Haleakala 2-meter, Las Cumbres Observatory (LCO) global telescope network</td><td>Infrared</td><td>Haleakala, Hawaii</td></tr>
+									<tr><td>Haleakala 2-meter, Las Cumbres Observatory (LCO) global telescope network</td><td>Infrared</td><td>Haleakala, Hawaii, USA</td></tr>
+									<tr><td>Mt. Cuba Observatory</td><td>Optical</td><td>Wilmington, Delaware, USA</td></tr>
 									<tr><td>Teide 1-meter, LCO</td><td>Optical</td><td>Tenerife, Spain</td></tr>
-									<tr><td>McDonald 1-meter, LCO</td><td>Optical</td><td>Fort Davis, Texas</td></tr>
+									<tr><td>McDonald 1-meter, LCO</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
 									<tr><td>CTIO 1-meter, LCO</td><td>Optical</td><td>CTIO, Chile</td></tr>
-									<tr><td>Kitt Peak 0.9-meter, Southeastern Association for Research in Astronomy (SARA)</td><td>Optical</td><td>Tuscon, Arizona</td></tr>
+									<tr><td>Kitt Peak 0.9-meter, Southeastern Association for Research in Astronomy (SARA)</td><td>Optical</td><td>Tuscon, Arizona, USA</td></tr>
 									<tr><td>CTIO 0.6-meter, SARA</td><td>Optical</td><td>CTIO, Chile</td></tr>
 									<tr><td>Roque de los Muchachos 1-meter, SARA</td><td>Optical</td><td>La Palma, Spain</td></tr>
-									<tr><td>2.1-meter, McDonald Observatory</td><td>Optical</td><td>Fort Davis, Texas</td></tr>
-									<tr><td>Paul and Jane Meyer Observatory</td><td>Optical</td><td>Valley Mills, Texas</td></tr>
-									<tr><td>Steward Observatory</td><td>Optical</td><td>Tucson, Arizona</td></tr>
+									<tr><td>2.1-meter, McDonald Observatory</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
+									<tr><td>Paul and Jane Meyer Observatory</td><td>Optical</td><td>Valley Mills, Texas, USA</td></tr>
+									<tr><td>Steward Observatory</td><td>Optical</td><td>Tucson, Arizona, USA</td></tr>
 									<tr><td>Large Array Survey Telescope</td><td>Optical</td><td>Kibbutz Neot Smadar, Israel</td></tr>
-									<tr><td>University of Hawaii 2.2 meter</td><td>Optical</td><td>Muana Kea, Hawaii</td></tr>
+									<tr><td>University of Hawaii 2.2 meter</td><td>Optical</td><td>Muana Kea, Hawaii, USA</td></tr>
 									<tr><td>Pico dos Dias Observatory</td><td>Optical</td><td>Itajuba, Brazil</td></tr>
 								</table></p>
 							</section>
